--- a/src/media.css
+++ b/src/media.css
@@ -24,13 +24,13 @@
         flex-direction:column;
         align-items:center;
         justify-content:center;
-        width:60%;
+        width:100%;
         height:100vh;
         background-image: radial-gradient(#140007,#404040);
        
         /* transform: scale(50); */
         /* background-color:#404040; */
-        border-top: 1px solid rgba(255, 255, 255, 0.123);
+        /* border-top: 1px solid rgba(255, 255, 255, 0.123); */
         transform: translateX(0%);
         transition: all 0.5s ease;
         z-index: 1500;
@@ -96,8 +96,8 @@
     }
     .navigation__icon{
         position: relative;
-        margin-top: 2rem;
-        margin-left: 1.6rem;
+        margin-top: 2.2rem;
+        margin-left: 1.8rem;
     }
     /* .navbar-links{
         top:100%;
