--- a/src/media.css
+++ b/src/media.css
@@ -51,7 +51,7 @@
    
 
     .navbar-links li a{
-        color:white;
+        color:#dddd;
         width:100%;
         padding: 1.5rem 0;
     }
@@ -83,9 +83,12 @@
   
 }
 @media (max-width:600px){
-    .navbar{
-        padding:2rem;
-    }
+ .navbar-container{
+    padding:2rem ;
+ }
+ .navigation__button{
+    right:2.3rem;
+ }
     .navigation__button{
         top:1.5rem;
         height: 4.4rem;
@@ -119,13 +122,26 @@
     }
 }
 @media (max-width:375px) {
-    .navbar{
+    .navbar-container{
         padding:1.5rem;
     }
+    .navigation__icon,.navigation__icon::before,.navigation__icon::after{
+        width:1.3rem;
+    }
+    .navigation__button{
+        top:1.3rem;
+        height: 3rem;
+        width:3rem
+    }
     img.navbar-logo__logo{
-        height: 2rem;
-        width: 2rem;
+        height: 1rem;
+        width: 1rem;
 
+    }
+    .navigation__icon{
+        position: relative;
+        margin-top: 1.4rem;
+        margin-left: 1.3rem;
     }
     .menu-img{
         display: block;
