--- a/src/views/home.css
+++ b/src/views/home.css
@@ -1,150 +1,248 @@
-.home{
-  width:100%;
-  background-color:#404040;
+.home {
+  width: 100%;
+  background-color: #404040;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
 }
-.spinner-logo{
+.spinner-logo {
   animation: spinnerAnimation 2s ease-out 0s infinite alternate both;
- object-fit: cover;
- width:5rem;
- height:5rem;
- display: flex;
-
+  object-fit: cover;
+  width: 5rem;
+  height: 5rem;
+  display: flex;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
-@keyframes spinnerAnimation{
-  0%{
-   transform: rotate(0deg) scale(0.8);
+.icons-links {
+  align-self: center;
+  /* background-color: #3fb9b4; */
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  margin-left: 3rem;
+  position: absolute;
+  bottom: 0;
+  left:0;
+  /* height: 93%; */
+  /* position: relative; */
+  /* height: 80vh; */
+  /* height: 97%; */
+}
+.ul-links {
+  list-style-type: none;
+  display: flex;
+  -webkit-box-align: center;
+  flex-direction: column;
+  /* gap: 2rem; */
+}
+.icon-link:link,
+.icon-link:visited {
+  text-decoration: none;
+  display: inline-block;
+}
+.icon-link:hover,
+.icon-link:active {
+  color: #3fb9b4;
+}
+.icon {
+  width: 20px;
+  height: 20px;
+
+  /* display:inline-block; */
+}
+.ul-links::after,
+.email-link::after {
+  content: "";
+  display: block;
+  width: 1px;
+  height: 90px;
+  margin: 0 auto;
+  background: #dddd;
+}
+.email-link {
+  display: flex;
+  flex-direction: column;
+  -webkit-box-align: center;
+  align-items: flex-end;
+  justify-content: flex-end;
+bottom: 0;
+right:3rem;
+  position: absolute;
+  /* margin-right: 3rem; */
+  /* height: 93%; */
+}
+.email-link .email {
+  text-decoration: none;
+  color: #dddd;
+  margin: 20px auto;
+  /* padding:10px; */
+  letter-spacing: 0.1rem;
+  writing-mode: vertical-rl;
+  -webkit-writing-mode: vertical-rl;
+  line-height: 1.8rem;
+  font-size: 1.2rem;
+  transition: all 0.3s;
+}
+.email-link .email:hover {
+  color: #3fb9b4;
+  transform: translateY(-3px);
+}
+@keyframes spinnerAnimation {
+  0% {
+    transform: rotate(0deg) scale(0.8);
   }
-  
-  50%{
+
+  50% {
     transform: rotate(45deg) scale(0.9);
   }
-  75%{
+  75% {
     transform: rotate(180deg) scale(1);
   }
-  100%{
-    
-      width: 6rem;
-      height:6rem;
-      transform: rotate(-180deg) scale(1.5);
-      object-fit: cover;
-    
-  }
-
-  
-}
-.home-container{
-    background-image: url('../assets/images/background.jpeg');
-    height: 86vh;
-    width: 100%;
-    background-size: cover;
+  100% {
+    width: 6rem;
+    height: 6rem;
+    transform: rotate(-180deg) scale(1.5);
     object-fit: cover;
-    background-position:center center;
-   
-    background-attachment: fixed; 
   }
-  
-  .sub-home{
-    height:86vh;
-    /* background:#404040; */
-    background:rgba(238, 238, 238, 0.263);
-    width:100%;
-    display: flex;
-    /* background-color: #dc548c; */
-    align-items: center;
-    justify-content:space-around;
-    height: 100%;
-    padding:2rem 0rem 10rem 0rem;
-    /* margin: 0 auto; */
-   
-  }
-  
-  .sub-image{
-    width:45%;
-    margin-right: 0rem;
-    /* background-color: green; */
-    /* align-content: center; */
-  }
-  
-  .sub-text{
-    width:40%;
-    padding:3rem;
-    margin:2rem 0 0 10rem;
-    display: inline-block;
-    text-align: center;
-    color: #ccc;
-    background-color: rgba(0, 0, 0, 0.836);
-    clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
-    
-  }
-  h3.hi {
-    font-size: 2.4rem;
-    font-weight: 400;
-   
-  }
-  h3 span{
-    font-weight: 500;
-   
-    color: transparent;
-    background-image: linear-gradient(to right bottom,#3fb9b4,#dd628b);
-    -webkit-background-clip: text;
-    background-clip: text;
-  }
-  h3.professional {
-    font-size: 2.4rem;
-    font-weight: 400;
-    /* padding: 1.5rem 0; */
-  }
-  .professional-text{
-    font-size: 1.8rem;
-    font-weight: 500;
-    line-height: 1.5;
-  }
-  .sub-text .names{
-    font-size: 3.2rem;
-    font-weight: 700;
-    /* text-transform: capitalize; */
-    font-family: "Clicker Script", cursive;
-   
-    color:#3fb9b4;
-  }
-  
-  .position-image{
-    position: relative;
-  }
-  
-  
-  .image{
-    width:75%;
-    position: absolute;
-    top:0;
-    left:0;
-    box-shadow: 5px 5px 1px white;
-    /* height: 100%; */
-    /* height: 36rem; */
-   
-    transform: scale(0.8)  translate(2px, -4px) rotate(-9deg);
-    border-radius: 50%;
-   z-index: 10;
-    transition: all .2s;
-    outline-offset: 1rem;
-  }
-  .image:hover{
-outline: .5rem solid #dd628b;
-box-shadow: 1px 1px 5px white;
-    /* box-shadow: 1px 1px 5px #dd628b; */
-    z-index: 12;
-    transform: scale(0.85) translate(-2px, -5px) rotate(24deg);
-  }
+}
+.home-container {
+  background-image: url("../assets/images/background.jpeg");
+  height: 86vh;
+  width: 100%;
+  background-size: cover;
+  object-fit: cover;
+  background-position: center center;
 
+  background-attachment: fixed;
+}
 
-.margin-top-30{
-    margin-top: 3rem;
-  }
-  .margin-top-15{
-    margin-top: 1.5rem;
-  }
+.sub-home {
+  height: 86vh;
+  /* background:#404040; */
+  background: rgba(238, 238, 238, 0.263);
+  width: 100%;
+  display: flex;
+  /* background-color: #dc548c; */
+  align-items: center;
+  justify-content: space-around;
+  height: 100%;
+  /* padding: 2rem 0rem 10rem 0rem; */
+  backface-visibility: hidden;
+  overflow: hidden;
+  /* margin: 0 auto; */
+}
+
+.sub-image {
+  width: 45%;
+  margin-right: 0rem;
+  /* background-color: green; */
+  /* align-content: center; */
+}
+
+.sub-text {
+  max-width: 35%;
+  padding: 2rem;
+  /* margin-left: 10rem; */
+  display: inline-block;
+  text-align: center;
+  color: #ccc;
+  outline-offset: 1rem;
+  box-shadow:0 1.5rem 4rem rgba(0,0,0,0.4);
   
+  transform: scale(0.85) translate(60px, 5px) rotate(24deg);
+  background-color: rgba(0, 0, 0, 0.836);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  border: 3px;
+  overflow: hidden;
+  position: relative;
+ 
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+
+  transition: all 0.3s;
+  z-index: 10;
+}
+.sub-text:hover {
+  background-color: #404040;
+  outline: 1rem solid #3fb9b4;
+  /* border: 3px; */
+  box-shadow:0 2.5rem 4rem rgba(0,0,0,0.5);
+  transform: scale(0.85) translate(0px, -5px) rotate(0deg);
+ 
+  z-index: 12;
+}
+
+h3 .saluate {
+  font-size: 1.8rem;
+  margin: 0px 0px 30px 4px;
+  font-weight: 400;
+  color: #3fb9b4;
+  display: block;
+}
+h3 .typing {
+  font-weight: 500;
+
+  color: transparent;
+  background-image: linear-gradient(to right bottom, #3fb9b4, #dd628b);
+  -webkit-background-clip: text;
+  background-clip: text;
+}
+h3.professional {
+  font-size: 2.4rem;
+  font-weight: 400;
+  /* padding: 1.5rem 0; */
+}
+.professional-text {
+  margin: 20px 0px 0px 0px;
+  font-size: 1.8rem;
+  font-weight: 500;
+  line-height: 1.5;
+}
+.sub-text .names {
+  /* font-size: 3.2rem; */
+  font-weight: 600;
+
+  /* text-transform: capitalize; */
+  font-size: clamp(20px, 4vw, 40px);
+  line-height: 1.1;
+  color: #ccd6f6;
+}
+
+.position-image {
+  position: relative;
+}
+
+.image {
+  width: 75%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  box-shadow: 5px 5px 1px white;
+  /* height: 100%; */
+  /* height: 36rem; */
+
+  transform: scale(0.8) translate(2px, -4px) rotate(-9deg);
+  border-radius: 50%;
+  z-index: 10;
+  transition: all 0.2s;
+  outline-offset: 1rem;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+.image:hover {
+  outline: 0.5rem solid #dd628b;
+  box-shadow: 1px 1px 5px white;
+  /* box-shadow: 1px 1px 5px #dd628b; */
+  z-index: 120000;
+  transform: scale(0.85) translate(-2px, -5px) rotate(24deg);
+}
+
+.margin-top-30 {
+  margin-top: 3rem;
+}
+.margin-top-15 {
+  margin-top: 1.5rem;
+}
