--- a/src/component/about.css
+++ b/src/component/about.css
@@ -1,9 +1,8 @@
-.about-container{
-    height:100vh;
-    width: 100%;
-    background-color: black;
-    
-  }
-  .b{
-    background:white;
-  }
+.about-container {
+  height: 100vh;
+  width: 100%;
+  background-color: #404040;
+}
+.b {
+  background: white;
+}
